# mesa-restaurant-agents

./: .gitignore  MANIFEST.in  README.md  animation.ipynb  feni_CustomePredict.ipynb  feni_manager V2.ipynb  feni_manager.ipynb  main.ipynb  manager_agent.ipynb  ml_model_selection.ipynb  profile_simulation.py  pyproject.toml  requirements.txt  restaurant.ipynb  restaurant_johannes.ipynb  restaurant_stefanie.ipynb  setup.py  tipping_game.ipynb  training_data_customers.csv
agent_system/: README.md  pyproject.toml  requirements.txt
agent_system/src/mesa_restaurant_agents/: visualization.py
agent_system/src/mesa_restaurant_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent_system/src/mesa_restaurant_agents/agents/: customer_agent.py  manager_agent.py  waiter_agent.py
agent_system/src/mesa_restaurant_agents/model/: restaurant_model.py
agent_system/src/mesa_restaurant_agents/utils/: environment_definition.py  kitchen.py  order_status.py  restaurant_grid.py  schedule_optimizer.py  shift.py  table.py  waiter_definfitions.py
src/mesa_restaurant_agents/: visualization.py
src/mesa_restaurant_agents/agents/: customer_agent.py  manager_agent.py  waiter_agent.py
src/mesa_restaurant_agents/model/: restaurant_model.py
src/mesa_restaurant_agents/utils/: order_status.py  shift.py
