[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "mesa-restaurant-agents"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "mesa==3.1.0",
    "pandas==2.2.3",
    "numpy==2.2.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "seaborn== 0.13.2",
    "matplotlib==3.4.3"
]